# ObjRecognition

./: BuildModel.cpp  CMakeLists.txt  CropModel.cpp  FilterScene.cpp  Model_Builder.cpp  Model_Builder.h  Recognizer.h  SegRecog.cpp  Training.cpp  ViewModel.cpp  VotingRecog.cpp  features.cpp  features.h  seg_recog.cpp  test.cpp  vote_recog.cpp
